data/derived/fa15/progs/unify/prog0467.ml.out
Characters 106-115:
  else count acc + 1 n in
       ^^^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
